# prism

./: .flake8  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/agents/: scientific-study-designer.md
aidocs/: gist-list.md  implementation-order.md  prd.md  statecharts-research.md  study-growth-strategies.md  study-network-position-virality.md  twitter-datasets-research.md  x-algorithm-research.md
backlog/: README.md
backlog/_templates/: bug.md  issue.md  plan.md
backlog/plans/: 20260127-data-pipeline.md  20260127-experiment-framework.md  20260127-foundation-agent-framework-ollama.md  20260127-observability-metrics.md  20260127-rag-feed-system.md  20260127-simulation-workflow-loop.md  20260127-x-algorithm-ranking.md  20260130-agent-behavior-statecharts.md  20260131-agent-strategy-system.md  20260131-dynamic-network-module.md
backlog/reviews/: 001-foundation-agent-ollama-review.md  002-rag-feed-system-review.md  003-agent-behavior-statecharts-review.md  004-simulation-workflow-loop-review.md
configs/: default.yaml
prism/: __init__.py
prism/agents/: __init__.py  decision.py  decisions.py  profiles.py  prompts.py  social_agent.py
prism/config/: __init__.py  settings.py
prism/llm/: __init__.py  client.py  config.py
prism/models/: __init__.py  post.py
prism/rag/: __init__.py  config.py  embeddings.py  formatting.py  models.py  retriever.py  store.py
prism/simulation/: __init__.py  checkpointer.py  config.py  controller.py  protocols.py  results.py  social_graph.py  state.py  triggers.py  (+1 more)
tests/: __init__.py  conftest.py  test_integration.py
(+142 files in other folders)
